--- a/frontend/random-recipe-router-mobile/package.json
+++ b/frontend/random-recipe-router-mobile/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -21,27 +21,30 @@
     "@rn-primitives/types": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^53.0.7",
-    "expo-blur": "~14.1.4",
+    "expo": "53.0.10",
+    "expo-auth-session": "~6.2.0",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
-    "expo-splash-screen": "~0.30.8",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-secure-store": "^14.2.3",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.6",
     "lucide-react-native": "^0.507.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "^0.79.2",
+    "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
@@ -52,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
@@ -61,7 +65,7 @@
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.4",
+    "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
     "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
